- fix for last fix
git-svn-id: https://svn.berlios.de/svnroot/repos/yacy/trunk@3289 6c8d7289-2bf4-0310-a012-ef5d649a1542